# brave_fabric

./: .gitignore  Cargo.toml  README.md  build.py
desktop/: Cargo.toml  README.md
desktop/src/: main.rs
emulator/: Cargo.toml  README.md
emulator/common/: Cargo.toml
emulator/common/src/: instruction_sets.rs  lib.rs  memory.rs
emulator/common/src/instruction_sets/: arm32.rs
emulator/common/src/instruction_sets/arm/: arm32.rs  thumb32.rs
emulator/gba/: Cargo.toml
emulator/gba/src/: cpu.rs  lib.rs  memory.rs  settings.rs
emulator/gba/src/cpu/: register.rs
emulator/src/: main.rs
libs/: README.md
libs/graphics/: Cargo.toml
libs/log/: Cargo.toml  build.rs
libs/log/src/: lib.rs
libs/sound/: Cargo.toml
libs/windowing/: Cargo.toml
libs/windowing/src/: event.rs  lib.rs  platform.rs
libs/windowing/src/platform/: win32.rs
libs/windowing/src/platform/win32/: message.rs
system/: README.md
system/home/: Cargo.toml
system/init/: Cargo.toml
