[package]
name = "brave_emulator"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brave_emulator_common = { path = "common" }
brave_emulator_gba = { path = "gba" }
brave_windowing = { path = "../libs/windowing" }
