[package]
name = "brave_windowing"
version = "0.1.0"
authors = ["Benjamin Cecile <bencecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies.winapi]
version = "*"
features = ["impl-default", "libloaderapi", "winuser"]
